--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "News Progressive Web App",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "lint": "eslint ./ --fix --fix && stylelint public/css/**.css"
+    "start": "node --icu-data-dir=node_modules/full-icu app.js",
+    "lint": "npx eslint ./ --fix && npx stylelint ./public/css/**.css"
   },
   "keywords": [
     "news",
@@ -15,6 +15,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.16.4",
+    "full-icu": "^1.2.1",
     "helmet": "^3.15.0",
     "jsonpath": "^1.0.0",
     "pug": "^2.0.3",
