--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "lint": "npx eslint ./ --fix && npx stylelint ./public/css/**.css"
+    "lint": "npx eslint ./ --fix && npx eslint public/js/* && npx stylelint ./public/css/**.css"
   },
   "keywords": [
     "news",
