--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^3.15.0",
     "intl": "^1.2.5",
     "jsonpath": "^1.0.0",
+    "moment": "^2.23.0",
     "pug": "^2.0.3",
     "reading-time": "^1.1.3",
     "request": "^2.88.0",
