Add proper DOM parser

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "full-icu": "^1.2.1",
     "helmet": "^3.15.0",
     "intl": "^1.2.5",
+    "jsdom": "^13.1.0",
     "jsonpath": "^1.0.0",
     "moment": "^2.23.0",
     "pug": "^2.0.3",
