--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "lint": "npx eslint ./ --fix && npx eslint public/js/* && npx stylelint ./public/css/**.css"
+    "lint": "npx eslint ./ --fix && npx eslint public/js/* && npx stylelint ./public/css/**.css",
+    "build": "npx babel public/js/*.mjs --out-file public/js/bundle.js"
   },
   "keywords": [
     "news",
@@ -14,6 +15,7 @@
   "author": "Thomas Steiner <steiner.thomas@gmail.com> (http://blog.tomayac.com/)",
   "license": "Apache-2.0",
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
@@ -30,6 +32,9 @@
     "spdy": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "eslint": "^5.12.0",
     "eslint-config-google": "^0.11.0",
     "stylelint": "^9.9.0",
@@ -51,5 +56,10 @@
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   }
 }
