--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "lint": "npx eslint ./ --fix && npx eslint public/js/* && npx stylelint ./public/css/**.css",
-    "build": "npx babel public/js/*.mjs --out-file public/js/bundle.js"
+    "lint": "npx eslint ./**.js --fix && npx eslint public/js/**.mjs && npx stylelint ./public/css/**.css",
+    "build": "npx babel --presets @babel/preset-env,minify public/js/*.mjs --out-file public/js/bundle.js"
   },
   "keywords": [
     "news",
@@ -35,6 +35,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
+    "babel-preset-minify": "^0.5.0",
     "eslint": "^5.12.0",
     "eslint-config-google": "^0.11.0",
     "stylelint": "^9.9.0",
@@ -55,11 +56,13 @@
     }
   },
   "stylelint": {
-    "extends": "stylelint-config-standard"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
+    "extends": "stylelint-config-standard",
+    "rules": {
+      "property-no-unknown": [true, {
+        "ignoreProperties": [
+          "initial-letter"
+        ]
+      }]
+    }
   }
 }
