--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "lint": "npx eslint ./**.js --fix && npx eslint public/js/**.mjs && npx stylelint ./public/css/**.css",
+    "lint": "npx eslint './**/*.js' --ignore-pattern '/node_modules/' --ignore-pattern 'bundle.js' --fix && npx eslint public/js/**.mjs && npx stylelint ./public/css/**.css",
     "build": "npx babel --presets @babel/preset-env,minify public/js/*.mjs --out-file public/js/bundle.js"
   },
   "keywords": [
