--- a/routes/manifest.webmanifest.json
+++ b/routes/manifest.webmanifest.json
@@ -17,7 +17,7 @@
   ],
   "display": "standalone",
   "orientation": "portrait",
-  "start_url": "/",
+  "start_url": ".",
   "theme_color": "black",
   "background_color": "white"
 }
