--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "lint": "npx eslint './**/*.js' --ignore-pattern '/node_modules/' --ignore-pattern 'bundle.js' --fix && npx eslint public/js/**.mjs && npx stylelint ./public/css/**.css",
-    "build": "npx babel --presets @babel/preset-env,minify public/js/main.mjs --out-file public/js/bundle.js"
+    "build": "npx babel --plugins @babel/plugin-transform-modules-commonjs --presets @babel/preset-env,minify public/js/*.mjs --out-file public/js/bundle.js"
   },
   "keywords": [
     "news",
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "babel-preset-minify": "^0.5.0",
     "eslint": "^5.12.0",
