--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "eslint": "^5.12.0",
     "eslint-config-google": "^0.11.0",
     "stylelint": "^9.9.0",
-    "stylelint-config-standard": "^18.2.0"
+    "stylelint-config-standard": "^18.2.0",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   },
   "eslintConfig": {
     "parserOptions": {
