--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "lint": "npx eslint './**/*.js' --ignore-pattern '/node_modules/' --ignore-pattern 'bundle.js' --fix && npx eslint public/js/**.mjs && npx stylelint ./public/css/**.css",
-    "build": "npx babel --plugins @babel/plugin-transform-modules-commonjs --presets @babel/preset-env,minify public/js/*.mjs --out-file public/js/bundle.js"
+    "build": "npx webpack --mode production public/js/main.mjs -o public/js/bundle.js && npx babel --plugins @babel/plugin-transform-modules-commonjs --presets @babel/preset-env,minify public/js/bundle.js --out-file public/js/bundle.js"
   },
   "keywords": [
     "news",
